[package]
name = "kube-dra"
version = "0.0.1"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.88.0"
authors = ["Gaurav Gahlot<me@gauravgahlot.in>"]
categories = ["api-bindings", "asynchronous"]
description = "A Rust library for building Kubernetes Dynamic Resource Allocation (DRA) drivers"
documentation = "https://docs.rs/kube-dra"
keywords = ["cloud-native", "device-management", "dra", "k8s", "kubernetes"]
readme = "README.md"
repository = "https://github.com/nubicle/kube-dra"
include = [    
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "src/**/*",
]

[features]
default = ["v1_34"]

# Kubernetes versions
v1_34 = []

[dependencies]
anyhow = "1.0.102"
k8s-openapi = { version = "0.27.0", features = ["v1_34"] }
prost = "0.14.3"
tonic = "0.14.5"
tonic-prost = "0.14.5"

[build-dependencies]
tonic-prost-build = "0.14.5"
